src/main/java/com/example/error/exception/CategoryNotFoundException.java
package com.example.error.exception;

import com.example.error.ErrorCode;

public class CategoryNotFoundException extends NotFoundException {

    public CategoryNotFoundException() {
        super(ErrorCode.CATEGORY_NOT_FOUND);
    }

}
